--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,20 @@ aside p {
   color: #0bd;
 }
 @media (max-width: 600px) {
-  h1 {
-    color: #0bd;
+  .page-title {
+    font-size: 2.5rem;
+  }
+  /* header */
+  .main-nav {
+    font-size: 1rem;
+    margin-top: 10px;
+  }
+  .main-nav li {
+    margin: 0 20px;
+  }
+
+  /* HOME */
+  .home-content {
+    margin-top: 20%;
   }
 }
