--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ img {
   background-repeat: no-repeat;
 }
 #home {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(images/mb.jpg);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(../images/mb.jpg);
   min-height: 100vh;
 }
 #home .page-title {
