--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ aside p {
 .grid {
   display: grid;
   gap: 26px;
-  grid-template-columns: repeat(2, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   margin-top: 6%;
   margin-bottom: 50px;
 }
@@ -333,10 +333,6 @@ aside p {
   /* curri */
   #curri .page-title {
     margin-top: 30px;
-  }
-  .grid img {
-    width: 175px;
-    height: 140px;
   }
   /* class */
   .class-contents {
