--- a/css/style.css
+++ b/css/style.css
@@ -344,5 +344,9 @@ aside p {
   #class .page-title {
     margin-top: 30px;
   }
+  /*------- 미디어 ---------*/
+  iframe {
+    width: 100%;
+  }
 }
 
